# inserta

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LEARNINGS.md  README.md  build_steam_deck.sh  build_wasm.sh  build_windows.ps1
.github/workflows/: ci.yml  release.yml
src/: assets.rs  components.rs  constants.rs  main.rs  resources.rs
src/actions/: behaviors.rs  blueprints.rs  components.rs  mod.rs  systems.rs  visuals.rs
src/enemies/: behaviors.rs  blueprints.rs  components.rs  mod.rs  systems.rs  visuals.rs
src/systems/: action_ui.rs  actions.rs  animation.rs  arena.rs  campaign.rs  combat.rs  common.rs  enemy_ai.rs  grid_utils.rs  growth.rs  intro.rs  loadout.rs  menu.rs  mod.rs  outro.rs  player.rs  setup.rs  shop.rs  splash.rs
src/weapons/: blaster.rs  mod.rs
webbuild/: index.html
