[package]
name = "inserta"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["mp3"] }
rand = "0.9.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
